refactor: remove hardcode file size to use data from api
